--- a/pages/pretty_about.html
+++ b/pages/pretty_about.html
@@ -1,24 +1,36 @@
 <div class="">
   <div class="">
-     <img class="profile-image" src="data/hi.png" alt="Abdul Logo">
+     <img class="profile-image" src="data/profile.png" alt="Abdul Logo">
 
      <div class="self-name" >
-        My name is <strong class="name">Abdul Noushad Sheikh</strong>,<br>
-      I'm a <span class="title">Software Developer!</span>
+        Hi, my name is <strong class="name">Abdul Noushad Sheikh</strong>,<br>
+        Welcome to my website! 
    </div>
   </div>
 
   <svg height="30" class="svg-line" width="100%">
-   <line stroke="white" x1="35%" y1="20" y2="20" x2="65%"></line>
-   <circle fill="white" cx="35%" cy="20" r="3"></circle>
-   <circle fill="white" cx="65%" cy="20" r="3"></circle>
+   <line stroke="white" x1="15%" y1="20" y2="20" x2="85%"></line>
+   <circle fill="white" cx="15%" cy="20" r="3"></circle>
+   <circle fill="white" cx="85%" cy="20" r="3"></circle>
    </svg>
 
-  <ul class="about-ul">
+  <!-- <ul class="about-ul">
      <li style="list-style: '🖥'" class="about-li">I work for <strong>Amdocs</strong> as a business intelligence developer in Pune, India.</li>
      <li style="list-style: '🎯'" class="about-li"> I learn any and everything that happens to come my way and I build softwares that solve real life problems.</li>
      <li style="list-style: '🚀'" class="about-li"> In my free time I automate and reverse engineer things around me. </li>
      <li style="list-style: '🧩'" class="about-li"> When I am not coding I like to do gym, hangout with friends, and play graphics intensive video games.</li>
-  </ul>
+  </ul> -->
+
+  <p class="about-para">
+   I am a resilient, innovative, and passionate software engineer with a strong desire to learn and grow. My goal is to make a positive impact on the world by building solutions to real-life problems and contributing to open-source.
+   <br>
+   As a full-stack developer and cloud engineer, I have experience in a variety of programming languages and tools. I am always eager to expand my skillset and learn new technologies. In my free time, I enjoy automating tasks and exploring new software development trends.
+<br>
+Currently, I am pursuing a Master's Degree in Computer Science at San Diego State University, where I also work as a Research Assistant for Dr. Homayouni and Dr. Shirazi on phishing detection and analysis. I conducted data analysis and research to improve phishing detection techniques and built an image scanning deep learning model using Tensorflow.
+<br>
+I have designed this website to mimic the experience of using an Ubuntu shell. As a back-end developer, I wanted to create a CLI-based site that allows you to run commands and learn about me and my work through the terminal. With this site, you can interact with the interface and access information about my experience, skills, and projects in a unique and engaging way.
+<br>
+Thank you for visiting my website, and please feel free to reach out if you have any questions or just want to say hello!
+  </p>
 </div>
 
