--- a/pages/pretty_edu.html
+++ b/pages/pretty_edu.html
@@ -10,6 +10,21 @@
    </svg>
  
   <ul class="edu-ul">
+      <li class="edu-li">
+         <div class="title">
+            <strong>San Diego State University</strong>
+         </div>
+         <div class="year">
+            <strong>2022 - 2023</strong>
+         </div>
+         <div class="course">
+            <strong>Computer Science</strong>
+         </div>
+         <div class="grade">
+            <strong>GPA: 4.0/4</strong>
+         </div>
+      </li>
+      <br><br>
      <li class="edu-li">
         <div class="title">
            <strong>Pune University - SPPU</strong>
@@ -21,23 +36,8 @@
            <strong>Computer Science &amp; Engineering</strong>
         </div>
         <div class="grade">
-           <strong>CGPA:  8.15/10</strong>
+           <strong>CGPA:  3.66/4</strong>
         </div>
-     </li>
-     <br><br>
-     <li class="edu-li">
-        <div class="title">
-           <strong>Class 12<sup>th</sup> (MHSB)</strong>
-        </div>
-        <div class="year">
-           <strong>2013 - 2015</strong>
-        </div>
-        <div class="course">
-           <strong>Maths, Physics, Chemistry</strong>
-        </div>
-        <div class="grade">
-           <strong>Percentage: 87.4%</strong>
-        </div>
-     </li>
+     </li>   
   </ul>
 </div>
