--- a/index.html
+++ b/index.html
@@ -1,199 +1,215 @@
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Abdul's CLI - Terminal</title>
-  <link rel="stylesheet/less" type="text/css" href="styles/main.less" />
-  <link rel="stylesheet/less" type="text/css" href="styles/flip.less" />
-  <link rel="stylesheet/less" type="text/css" href="styles/prettyUI.less" />
-  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu" />
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.2/less.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/1.4.3/js/jquery.terminal.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css"> 
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css" integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous">
-  <script type="text/javascript" src="js/shell.js"></script>
-  <script type="text/javascript" src="js/cli.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>The Clock</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=Heebo:300&display=swap');
 
-  <script src="js/jquery.flip.js"></script>
-  <script>
-    $(function() {
-      // console.log("Hi");
-        $("#card").flip({
-            trigger: 'manual',
-            speed: 2000,
-        });
-    });
+        * {
+        box-sizing: border-box;
+        }
 
-    $(window).on('load',function() {
-      setTimeout(function() {
-        $(".loader").fadeOut(500,function() {
-            // fadeOut complete. Remove the loading div
-            $( ".loader" ).remove(); //makes page more lightweight 
-        });
-        flipWindow();
-      }, 500);
-    });
-  </script>
+        :root {
+        --primary-color: #000;
+        --secondary-color: #fff;
+        }
 
-  <!-- Meta tags start-->
-  <meta content="yes" name="apple-mobile-web-app-capable">
-  <meta content="black-translucent" name="apple-mobile-web-app-status-bar-style">
-  <link href="favicon.ico" rel="shortcut icon">
-  <meta content="https://avatars.githubusercontent.com/u/17446181" property="og:image">
-  <meta content="Abdul Noushad Sheikh" property="og:title">
-  <meta content="abdul.co.in" property="og:site_name">
-  <meta content="http://abdul.co.in/" property="og:url">
-  <meta content="Abdul's Ubuntu Website with CLI and GUI" property="og:description" >
-  <meta content="Abdul's Ubuntu Website with CLI and GUI">
-  <meta content="Abdul Noushad Sheikh"name="author">
-  <meta content="Abdul Noushad Sheikh" name="copyright">
-  <!-- Meta tags end -->
+        html {
+        transition: all 0.5s ease-in;
+        }
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135127723-3"></script>
-  <script>
-    if (location.hostname != "localhost") {
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
+        html.dark {
+        --primary-color: #fff;
+        --secondary-color: #333;
+        }
 
-      gtag("config", "UA-135127723-3");
-    } else {
-      console.log("dev mode detected, don't track view");
-    }
-  </script>
-  <!-- Google Analytics end -->
+        html.dark {
+        background-color: #111;
+        color: var(--primary-color);
+        }
 
-</head>
+        body {
+        font-family: 'Heebo', sans-serif;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        overflow: hidden;
+        margin: 0;
+        }
 
-<body>
-  <div class="loader">
-    <img src="data/ubuntu.svg" alt="Ubuntu" class="ubuntu-logo">
-    <img src="data/throbber.svg" alt="" class="ubuntu-loading">
-  </div>
+        .toggle {
+        cursor: pointer;
+        background-color: var(--primary-color);
+        color: var(--secondary-color);
+        border: 0;
+        border-radius: 4px;
+        padding: 8px 12px;
+        position: absolute;
+        top: 100px;
+        }
 
-<div class="flip-box" id="card">
+        .toggle:focus {
+        outline: none;
+        }
 
-  <div class="terminal-window front">
-    <header>
-      <div class="header-title">Abdul's CLI - Terminal</div>
-      <div class="button flip">
-        <i class="fa-solid fa-rotate gold" onclick="flipWindow()"></i>
+        .clock-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        }
+
+        .clock {
+        position: relative;
+        width: 200px;
+        height: 200px;
+        }
+
+        .needle {
+        background-color: var(--primary-color);
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        height: 65px;
+        width: 3px;
+        transform-origin: bottom center;
+        transition: all 0.5s ease-in;
+        }
+
+        .needle.hour {
+        transform: translate(-50%, -100%) rotate(0deg);
+        }
+
+        .needle.minute {
+        transform: translate(-50%, -100%) rotate(0deg);
+        height: 100px;
+        }
+
+        .needle.second {
+        transform: translate(-50%, -100%) rotate(0deg);
+        height: 100px;
+        background-color: #e74c3c;
+        }
+
+        .center-point {
+        background-color: #e74c3c;
+        width: 10px;
+        height: 10px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border-radius: 50%;
+        }
+
+        .center-point::after {
+        content: '';
+        background-color: var(--primary-color);
+        width: 5px;
+        height: 5px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border-radius: 50%;
+        }
+
+        .time {
+        font-size: 60px;
+        }
+
+        .date {
+        color: #aaa;
+        font-size: 14px;
+        letter-spacing: 0.3px;
+        text-transform: uppercase;
+        }
+
+        .date .circle {
+        background-color: var(--primary-color);
+        color: var(--secondary-color);
+        border-radius: 50%;
+        height: 18px;
+        width: 18px;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        line-height: 18px;
+        transition: all 0.5s ease-in;
+        font-size: 12px;
+        }
+    </style>
+  </head>
+  <body>
+    <!-- Inspired by this dribbble shot https://dribbble.com/shots/5958443-Alarm-clock -->
+
+    <button class="toggle">Dark mode</button>
+
+    <div class="clock-container">
+      <div class="clock">
+        <div class="needle hour"></div>
+        <div class="needle minute"></div>
+        <div class="needle second"></div>
+        <div class="center-point"></div>
       </div>
-      <div class="button yellow">
-        <i class="fa-solid fa-minus white"></i>
-      </div>
-      <div class="button green">
-        <i class="fa-regular fa-square white"></i>
-      </div>
-      <div class="button red">
-        <i class="fa-solid fa-circle-xmark insta"></i>
-      </div>
-    </header>
-    <div id="terminal">
-      <p><strong class="green" style="line-height: 1.7;">
-        \[._.]/</strong> - you're in abdul's cli, type `help` to get started, or click <i class="fa-solid fa-rotate gold" style="padding: 4px;"></i> on the top right for graphical interface.
-      </p>
-      <div class="loginInfo"></div>
-      <p class="hidden">
-        <span class="prompt">
-          <strong class="home">abdul@notebook-HP</strong>
-          <strong class="white">:</strong>
-          <strong class="dir">~</strong>
-          <strong class="white">$</strong>
-        </span>
-        <span contenteditable="true" spellcheck="false" autocomplete="off" autocorrect="off" class="input"> </span>
-      </p>
+
+      <div class="time"></div>
+      <div class="date"></div>
     </div>
-  </div>
 
-  <div class="terminal-window back">
-    <header>
-      <div class="header-title">Abdul's GUI</div>
-      <div class="button flip">
-        <i class="fa-solid fa-rotate gold" onclick="flipWindow()"></i>
-      </div>
-      <div class="button yellow">
-        <i class="fa-solid fa-minus white"></i>
-      </div>
-      <div class="button green">
-        <i class="fa-regular fa-square white"></i>
-      </div>
-      <div class="button red">
-        <i class="fa-solid fa-circle-xmark insta"></i>
-      </div>
-    </header>
+    <script>
+        const hourEl = document.querySelector('.hour')
+        const minuteEl = document.querySelector('.minute')
+        const secondEl = document.querySelector('.second')
+        const timeEl = document.querySelector('.time')
+        const dateEl = document.querySelector('.date')
+        const toggle = document.querySelector('.toggle')
 
-    <!-- <div id="terminal">
-      <p><strong class="green">\[._.]/</strong> - Back flipped.</p>
-    </div> -->
+        const days = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
+        const months = ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"];
 
-    <nav class=" " id="leftcol">
-      <div class="leftcolTab active">
-        <i class="fa-solid fa-user icon"></i>
-        <div class="name">About</div>
-      </div>
-      <div class="leftcolTab">
-        <i class="fa-solid fa-graduation-cap icon"></i>
-        <div class="name">Education</div>
-      </div>
-      <div class="leftcolTab">
-        <i class="fa-solid fa-laptop-code icon"></i>
-        <div class="name">Skills</div>
-      </div>	
-      <div class="leftcolTab">
-        <i class="fa-solid fa-building icon"></i>
-        <div class="name">Experience</div>
-      </div>
-      <!-- <div class="leftcolTab">
-        <i class="fa-solid fa-diagram-project icon"></i>
-        <div class="name">Projects</div>
-      </div>	 -->
-      <div class="leftcolTab">
-        <i class="fa-solid fa-file-pdf icon"></i>
-        <div class="name">Resume</div>
-      </div>
-      <div class="leftcolTab">
-        <i class="fa-solid fa-address-card icon"></i>
-        <div class="name">Contact</div>
-      </div>
-      <div class="leftcolTab">
-        <i class="fa-solid fa-rotate icon"></i>
-        <div class="name">CLI Terminal</div>
-      </div>
-    </nav>
-    
-    <div class="" id="rightcol">
-      <span class="nav-opener" onclick="openSlider()">&#9776;</span>
-      <div class="content">
+        toggle.addEventListener('click', (e) => {
+            const html = document.querySelector('html')
+            if (html.classList.contains('dark')) {
+                html.classList.remove('dark')
+                e.target.innerHTML = 'Dark mode'
+            } else {
+                html.classList.add('dark')
+                e.target.innerHTML = 'Light mode'
+            }
+        })
 
-      </div>
-    </div>
-  </div>
-</div>
+        function setTime() {
+            const time = new Date();
+            const month = time.getMonth()
+            const day = time.getDay()
+            const date = time.getDate()
+            const hours = time.getHours()
+            const hoursForClock = hours >= 13 ? hours % 12 : hours;
+            const minutes = time.getMinutes()
+            const seconds = time.getSeconds()
+            const ampm = hours >= 12 ? 'PM' : 'AM'
 
-<!-- <div class="fabFlip">
-  <i class="fa-solid fa-repeat flip-img" onclick="flipWindow()"></i>
-</div> -->
+            hourEl.style.transform = `translate(-50%, -100%) rotate(${scale(hoursForClock, 0, 12, 0, 360)}deg)`
+            minuteEl.style.transform = `translate(-50%, -100%) rotate(${scale(minutes, 0, 60, 0, 360)}deg)`
+            secondEl.style.transform = `translate(-50%, -100%) rotate(${scale(seconds, 0, 60, 0, 360)}deg)`
 
-<div class="footer">
-  <p> Made with ❤️ & ☕</p>
-  <p> Inspired by <strong>Ubuntu</strong> 
-    <i class="devicon-linux-plain"></i>
-  </p>
-  <!-- <p >
-    For 
-    <span class="flip-text">GUI</span> 
-    <strong class="flip-btn" onclick="flipWindow()">click here</strong>
-  </p> -->
-  <p class="copyright">
-    <strong>© Abdul Noushad Sheikh 2023</strong>
-  </p>
-</div>
+            timeEl.innerHTML = `${hoursForClock}:${minutes < 10 ? `0${minutes}` : minutes} ${ampm}`
+            dateEl.innerHTML = `${days[day]}, ${months[month]} <span class="circle">${date}</span>`
+        }
 
-<script type="text/javascript" src="js/loginInfo.js"></script>
-<script type="text/javascript" src="js/prettyUI.js"></script>
-</body>
+        // StackOverflow https://stackoverflow.com/questions/10756313/javascript-jquery-map-a-range-of-numbers-to-another-range-of-numbers
+        const scale = (num, in_min, in_max, out_min, out_max) => {
+            return (num - in_min) * (out_max - out_min) / (in_max - in_min) + out_min;
+        }
+
+        setTime()
+
+        setInterval(setTime, 1000)
+    </script>
+  </body>
+</html>
