--- a/pages/about.html
+++ b/pages/about.html
@@ -1,5 +1,7 @@
 <p>
-  I am a resilient, innovative, and passionate student of life, I build solution to real-life problems and contribute to open-source. <br><br>
-  I do fullstack software developement and cloud engineering. I learn any and everything that happens to come my way. In my free time I automate things around me. 💻 <br><br>
-  I work at Amdocs, Pune for AT&T networks on cloud modernization; containerizing AT&T software bit by bit. 😄
+  Welcome to my little piece of the digital galaxy! At core, I'm a tenacious innovator and an unchained technologist. My mission? To forge meaningful solutions to tackle the real-world challenges, trying to contribute back to the open-source community and striving to bring change one line of code at a time.
+  <br>
+  This website is my creative outlet, an ideal embodiment of my love for backend development, built to simulate Ubuntu shell experience. This is a CLI-based portal welcoming you to a walk-through in my professional landscape and personal projects. This interface, however, shall not just be a bridge to my world but a reflecting pool of how I present the making of technology accessible and enjoyable.
+  <br>
+  Thank you for dropping by.
 </p>
