--- a/pages/contact.html
+++ b/pages/contact.html
@@ -30,10 +30,10 @@
 		<tr>
 			<td><i class="fa-solid fa-at green"></i></td>
 			<td>
-			<a class='title-link' target='_blank' href='mailto:me@abdul.co.in'>Email</a>
+			<a class='title-link' target='_blank' href='mailto:asheikh9725@sdsu.edu'>Email</a>
 			</td>
 			<td>
-			<a class='title-link' target='_blank' href='mailto:me@abdul.co.in'>me@abdul.co.in</a>
+			<a class='title-link' target='_blank' href='mailto:asheikh9725@sdsu.edu'>asheikh9725@sdsu.edu</a>
 			</td>
 		</tr>
 
