--- a/pages/pretty_about.html
+++ b/pages/pretty_about.html
@@ -22,15 +22,11 @@
   </ul> -->
 
   <p class="about-para">
-   I am a resilient, innovative, and passionate software engineer with a strong desire to learn and grow. My goal is to make a positive impact on the world by building solutions to real-life problems and contributing to open-source.
-   <br>
-   As a full-stack developer and cloud engineer, I have experience in a variety of programming languages and tools. I am always eager to expand my skillset and learn new technologies. In my free time, I enjoy automating tasks and exploring new software development trends.
+   Welcome to my little piece of the digital galaxy! At core, I'm a tenacious innovator and an unchained technologist. My mission? To forge meaningful solutions to tackle the real-world challenges, trying to contribute back to the open-source community and striving to bring change one line of code at a time.
 <br>
-Currently, I am pursuing a Master's Degree in Computer Science at San Diego State University, where I also work as a Research Assistant for Dr. Homayouni and Dr. Shirazi on phishing detection and analysis. I conducted data analysis and research to improve phishing detection techniques and built an image scanning deep learning model using Tensorflow.
+This website is my creative outlet, an ideal embodiment of my love for backend development, built to simulate Ubuntu shell experience. This is a CLI-based portal welcoming you to a walk-through in my professional landscape and personal projects. This interface, however, shall not just be a bridge to my world but a reflecting pool of how I present the making of technology accessible and enjoyable.
 <br>
-I have designed this website to mimic the experience of using an Ubuntu shell. As a back-end developer, I wanted to create a CLI-based site that allows you to run commands and learn about me and my work through the terminal. With this site, you can interact with the interface and access information about my experience, skills, and projects in a unique and engaging way.
-<br>
-Thank you for visiting my website, and please feel free to reach out if you have any questions or just want to say hello!
+Thank you for dropping by.
   </p>
 </div>
 
