--- a/pages/pretty_edu.html
+++ b/pages/pretty_edu.html
@@ -15,13 +15,13 @@
             <strong>San Diego State University</strong>
          </div>
          <div class="year">
-            <strong>2022 - 2023</strong>
+            <strong>Aug 2022 - May 2024</strong>
          </div>
          <div class="course">
             <strong>Computer Science</strong>
          </div>
          <div class="grade">
-            <strong>GPA: 4.0/4</strong>
+            <strong>GPA: 3.9/4</strong>
          </div>
       </li>
       <br><br>
@@ -36,7 +36,7 @@
            <strong>Computer Science &amp; Engineering</strong>
         </div>
         <div class="grade">
-           <strong>CGPA:  3.66/4</strong>
+           <strong>GPA:  3.66/4</strong>
         </div>
      </li>   
   </ul>
