--- a/pages/pretty_skills.html
+++ b/pages/pretty_skills.html
@@ -11,44 +11,40 @@
  
    <ul class="about-ul">
       <li  class="about-li">I find my expertise in vast variety of programming languages and frameworks.</li>
-      <li class="about-li">Debugging!? I hate debugging and that's why I tend to do it in as less time as possible.</li>
+      <!-- <li class="about-li">Debugging!? I hate debugging and that's why I tend to do it in as less time as possible.</li> -->
       <li class="about-li">I also love working on and making use of, most of the cloud services that help me create programs and solution faster.</li>
-      <li class="about-li">Some of the tech stack that I have frequently used are,<br><br>
+      <li class="about-li">Some of the tech stack that I have frequently used are,<br><br><br><br>
         <div class="tech-container">
 
           <div class="tech-lang">
-            <strong>Languages & Tools:</strong><br><br>
+            <strong>Languages & Frameworks:</strong><br><br>
             <i class="big devicon-python-plain-wordmark colored"></i>
             <i class="big devicon-java-plain-wordmark colored"></i>
             <i class="big devicon-javascript-plain colored"></i>
             <i class="big devicon-bash-plain"></i>
-            <i class="big devicon-html5-plain-wordmark colored"></i>
-            <i class="big devicon-php-plain colored"></i>
-            <i class="big devicon-cplusplus-line-wordmark"></i>
-            <i class="big devicon-jetbrains-plain colored"></i>
-            <i class="big devicon-git-plain-wordmark colored"></i>
-            <i class="big devicon-vscode-plain colored"></i>
-            <i class="big devicon-ubuntu-plain-wordmark colored"></i>
-            <i class="big devicon-atom-original colored"></i>
-            <i class="big devicon-github-original-wordmark"></i>
-
+            <i class="big devicon-django-line-wordmark"></i>
+            <i class="big devicon-express-original colored"></i>
+            <i class="big devicon-mysql-plain-wordmark"></i>
+            <i class="big devicon-mongodb-plain-wordmark colored"></i>
+            <i class="big devicon-spring-original-wordmark colored"></i>
+            <i class="big devicon-ubuntu-plain-wordmark"></i>
           </div>
           <br><br>
           <div class="tech-framework">
-            <strong>Frameworks & Services:</strong><br><br>
+            <strong>Tools:</strong><br><br>
             <i class="big devicon-amazonwebservices-plain-wordmark colored"></i>
-            <i class="big devicon-angularjs-plain colored"></i>
-            <i class="big devicon-apache-line-wordmark"></i>
-            <i class="big devicon-docker-plain-wordmark colored"></i>
-            <i class="big devicon-django-line-wordmark"></i>
-            <i class="big devicon-express-original colored"></i>
-            <i class="big devicon-jquery-plain-wordmark colored"></i>
-            <i class="big devicon-less-plain-wordmark colored"></i>
-            <i class="big devicon-nginx-plain-wordmark colored"></i>
-            <i class="big devicon-react-original-wordmark colored"></i>
-            <i class="big devicon-tomcat-line-wordmark colored"></i>
             <i class="big devicon-azure-plain colored"></i>
-            <i class="big devicon-firebase-plain-wordmark colored"></i>
+            <i class="big devicon-kubernetes-plain colored"></i>
+            <i class="big devicon-apache-line-wordmark"></i>
+            <i class="big devicon-azuredevops-plain colored"></i>
+            <i class="big devicon-terraform-plain-wordmark"></i>
+            <i class="big devicon-docker-plain-wordmark colored"></i>
+            <i class="big devicon-jenkins-plain"></i>
+            <i class="big devicon-nginx-plain-wordmark colored"></i>
+            <i class="big devicon-vscode-plain colored"></i>
+            <i class="big devicon-ubuntu-plain-wordmark colored"></i>
+            <i class="big devicon-github-original-wordmark"></i>
+            <i class="big devicon-jira-plain-wordmark colored"></i>
           </div>
         </div>
       </li>
