--- a/pages/pretty_resume.html
+++ b/pages/pretty_resume.html
@@ -13,7 +13,7 @@
 <p class="helptext">Please maximize the window for best view.</p>
 
  <!-- <iframe src="data/Abdul_Sheikh_Resume.pdf" class="resume-frame"></iframe> -->
- <iframe src="https://docs.google.com/viewer?url=https://abdul.co.in/data/Abdul_Sheikh_Resume.pdf&embedded=true" 
+ <iframe src="https://docs.google.com/viewer?url=https://dev0.us/data/Abdul_Sheikh_Resume.pdf&embedded=true" 
  frameborder="0" class="resume-frame"></iframe>
 
 
