--- a/pages/home.html
+++ b/pages/home.html
@@ -1,7 +1,7 @@
 <p>
   about.txt
   &nbsp&nbsp
-  <span class='blue'>skills</span>
+  <span class='li-blue'>skills</span>
   &nbsp&nbsp
   contact.txt
   <br>
