--- a/pages/help.html
+++ b/pages/help.html
@@ -5,6 +5,7 @@
     <li><strong>cd DIRECTORY</strong> - move into DIRECTORY or just cd to return to home</li>
     <li><strong>ls</strong> - show files in current directory</li>
     <li><strong>history</strong> - see your command history</li>
+    <li><strong>login</strong> - fetch login IP/location (opt-in)</li>
     <li><strong>clear</strong> - clear current window</li>
   </ul>
 </div>
