--- a/pages/home.html
+++ b/pages/home.html
@@ -1,12 +1,16 @@
 <p>
   about.txt
   &nbsp&nbsp
-  <span class='li-blue'>skills</span>
+  <span class='li-blue'>skills/</span>
   &nbsp&nbsp
   contact.txt
+  &nbsp&nbsp
+  help.txt
   <br>
   resume.txt
   &nbsp&nbsp
   projects.txt
+  &nbsp&nbsp
+  gui
   <br>
 </p>
