--- a/pages/pretty_about.html
+++ b/pages/pretty_about.html
@@ -1,6 +1,6 @@
 <div class="">
   <div class="">
-     <img class="profile-image" src="data/profile.png" alt="Abdul Logo">
+     <img class="profile-image" src="data/profile.png" alt="Abdul Logo" loading="lazy" decoding="async">
 
      <div class="self-name" >
         Hi, my name is <strong class="name">Abdul Noushad Sheikh</strong>,<br>
@@ -29,4 +29,3 @@ This website is my creative outlet, an ideal embodiment of my love for backend d
 Thank you for dropping by.
   </p>
 </div>
-
