--- a/pages/pretty_exp.html
+++ b/pages/pretty_exp.html
@@ -16,7 +16,7 @@
          <tbody>
             <tr>
             <td rowspan="2" class="logo">
-               <img src="data/awm_logo.jpg" alt="">
+               <img src="data/awm_logo.jpg" alt="AWM logo" loading="lazy" decoding="async">
             </td>
             <td class="title">
                <strong>AWM Global Advisors</strong>
@@ -48,7 +48,7 @@
            <tbody>
               <tr>
                <td rowspan="2" class="logo">
-                  <img src="data/sdsu_logo.jpg" alt="">
+                  <img src="data/sdsu_logo.jpg" alt="SDSU logo" loading="lazy" decoding="async">
                </td>
                <td class="title">
                   <strong>San Diego State University</strong>
@@ -80,7 +80,7 @@
          <tbody>
             <tr>
              <td rowspan="2" class="logo">
-                <img src="data/amdocs.svg" alt="">
+                <img src="data/amdocs.svg" alt="Amdocs logo" loading="lazy" decoding="async">
              </td>
              <td class="title">
                 <strong>Amdocs</strong>
@@ -111,7 +111,7 @@
          <tbody>
             <tr>
              <td rowspan="2" class="logo">
-                <img src="data/deloitte.svg" alt="">
+                <img src="data/deloitte.svg" alt="Deloitte logo" loading="lazy" decoding="async">
              </td>
              <td class="title">
                 <strong>Deloitte</strong>
