--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,37 +3,37 @@
 		<tr>
 			<td><i class="devicon-github-original"></i>&nbsp&nbsp</td>
 			<td>
-			<a class='title-link' target='_blank' href='https://github.com/abdulnine7'>GitHub</a>
+			<a class='title-link' target='_blank' rel='noopener noreferrer' href='https://github.com/abdulnine7'>GitHub</a>
 			</td>
 			<td>
-			<a class='title-link' target='_blank' href='https://github.com/abdulnine7'>abdulnine7</a>
+			<a class='title-link' target='_blank' rel='noopener noreferrer' href='https://github.com/abdulnine7'>abdulnine7</a>
 			</td>
 		</tr>
 		<tr>
 			<td><i class="devicon-linkedin-plain colored"></i></td>
 			<td>
-			<a class='title-link' target='_blank' href='https://www.linkedin.com/in/abdulnine7'>LinkedIn</a>
+			<a class='title-link' target='_blank' rel='noopener noreferrer' href='https://www.linkedin.com/in/abdulnine7'>LinkedIn</a>
 			</td>
 			<td>
-			<a class='title-link' target='_blank' href='https://www.linkedin.com/in/abdulnine7'>abdulnine7</a>
+			<a class='title-link' target='_blank' rel='noopener noreferrer' href='https://www.linkedin.com/in/abdulnine7'>abdulnine7</a>
 			</td>
 		</tr>
 		<tr>
       <td><i class="fa-solid fa-hashtag insta"></i></td>
 			<td>
-			<a class='title-link' target='_blank' href='https://www.instagram.com/abdul_codes/'>Instagram &nbsp&nbsp</a>
+			<a class='title-link' target='_blank' rel='noopener noreferrer' href='https://www.instagram.com/abddulnine7/'>Instagram &nbsp&nbsp</a>
 			</td>
 			<td>
-			<a class='title-link' target='_blank' href='https://www.instagram.com/abdul_codes/'>abdul_codes</a>
+			<a class='title-link' target='_blank' rel='noopener noreferrer' href='https://www.instagram.com/abddulnine7/'>abddulnine7</a>
 			</td>
 		</tr>
 		<tr>
 			<td><i class="fa-solid fa-at green"></i></td>
 			<td>
-			<a class='title-link' target='_blank' href='mailto:asheikh9725@sdsu.edu'>Email</a>
+			<a class='title-link' target='_blank' rel='noopener noreferrer' href='mailto:bitwiseabdul@gmail.com'>Email</a>
 			</td>
 			<td>
-			<a class='title-link' target='_blank' href='mailto:asheikh9725@sdsu.edu'>asheikh9725@sdsu.edu</a>
+			<a class='title-link' target='_blank' rel='noopener noreferrer' href='mailto:bitwiseabdul@gmail.com'>bitwiseabdul@gmail.com</a>
 			</td>
 		</tr>
 
