--- a/pages/resume.html
+++ b/pages/resume.html
@@ -1,3 +1,3 @@
-<a class='title-link' target='_blank' href='data/Abdul_Sheikh_Resume.pdf'>
+<a class='title-link' target='_blank' rel='noopener noreferrer' href='data/Abdul_Sheikh_Resume.pdf'>
   View My Resume
 </a>
