--- a/pages/pretty_about.html
+++ b/pages/pretty_about.html
@@ -28,4 +28,13 @@ This website is my creative outlet, an ideal embodiment of my love for backend d
 <br>
 Thank you for dropping by.
   </p>
+
+  <div class="about-panel">
+    <div class="about-panel-title">About This Desktop</div>
+    <div class="about-panel-body">
+      <div class="about-badge">Made with Love, Coffee, and Codex</div>
+      <div class="about-badge">Inspired by Ubuntu GNOME</div>
+    </div>
+    <div class="about-panel-footer">© Abdul Noushad Sheikh 2026</div>
+  </div>
 </div>
