--- a/index.html
+++ b/index.html
@@ -83,108 +83,9 @@
     </button>
   </aside>
 
-  <section class="window terminal-window" data-window-id="terminal" style="left: 220px; top: 80px;">
-    <header class="window-header">
-      <div class="window-title">Terminal</div>
-      <div class="window-controls" aria-label="Window controls">
-        <button class="win-btn minimize" aria-label="Minimize">–</button>
-        <button class="win-btn maximize" aria-label="Maximize">□</button>
-        <button class="win-btn close" aria-label="Close">×</button>
-      </div>
-    </header>
-    <div class="resize-handle" aria-hidden="true"></div>
-    <div id="terminal" role="region" aria-live="polite" aria-label="Terminal output">
-      <p><strong class="green" style="line-height: 1.7;">
-        \[._.]/</strong> - you're in abdul's cli. Try <span class="li-blue">help</span>, <span class="li-blue">about</span>, <span class="li-blue">projects</span>, or <span class="li-blue">gui</span>.
-        Type <span class="li-blue">gui</span> to open the profile window.
-      </p>
-      <div class="loginInfo"></div>
-      <p class="hidden">
-        <span class="prompt">
-          <strong class="home">abdul@linuxy.us</strong>
-          <strong class="white">:</strong>
-          <strong class="dir">~</strong>
-          <strong class="white">$</strong>
-        </span>
-        <span contenteditable="true" role="textbox" aria-label="Terminal input" aria-multiline="false" spellcheck="false" autocomplete="off" autocorrect="off" class="input"> </span>
-      </p>
-    </div>
-  </section>
-
-  <section class="window gui-window" data-window-id="gui" style="left: 320px; top: 140px; display: none;">
-    <header class="window-header">
-      <div class="window-title">Profile</div>
-      <div class="window-controls" aria-label="Window controls">
-        <button class="win-btn minimize" aria-label="Minimize">–</button>
-        <button class="win-btn maximize" aria-label="Maximize">□</button>
-        <button class="win-btn close" aria-label="Close">×</button>
-      </div>
-    </header>
-    <div class="resize-handle" aria-hidden="true"></div>
-
-    <!-- <div id="terminal">
-      <p><strong class="green">\[._.]/</strong> - Back flipped.</p>
-    </div> -->
-
-    <nav class="window-sidebar" id="leftcol" aria-label="GUI sections">
-      <div class="leftcolTab active">
-        <i class="fa-solid fa-user icon"></i>
-        <div class="name">About</div>
-      </div>
-      <div class="leftcolTab">
-        <i class="fa-solid fa-graduation-cap icon"></i>
-        <div class="name">Education</div>
-      </div>
-      <div class="leftcolTab">
-        <i class="fa-solid fa-laptop-code icon"></i>
-        <div class="name">Skills</div>
-      </div>	
-      <div class="leftcolTab">
-        <i class="fa-solid fa-building icon"></i>
-        <div class="name">Experience</div>
-      </div>
-      <!-- <div class="leftcolTab">
-        <i class="fa-solid fa-diagram-project icon"></i>
-        <div class="name">Projects</div>
-      </div>	 -->
-      <div class="leftcolTab">
-        <i class="fa-solid fa-file-pdf icon"></i>
-        <div class="name">Resume</div>
-      </div>
-      <div class="leftcolTab">
-        <i class="fa-solid fa-address-card icon"></i>
-        <div class="name">Contact</div>
-      </div>
-    </nav>
-    
-    <div class="window-content" id="rightcol">
-      <span class="nav-opener" role="button" tabindex="0" aria-label="Open navigation" onclick="openSlider()">&#9776;</span>
-      <div class="content"></div>
-    </div>
-  </section>
-
-  <section class="window about-window" data-window-id="about-desktop" style="left: 260px; top: 120px; width: 520px; height: 360px; display: none;">
-    <header class="window-header">
-      <div class="window-title">About This Desktop</div>
-      <div class="window-controls" aria-label="Window controls">
-        <button class="win-btn minimize" aria-label="Minimize">–</button>
-        <button class="win-btn maximize" aria-label="Maximize">□</button>
-        <button class="win-btn close" aria-label="Close">×</button>
-      </div>
-    </header>
-    <div class="resize-handle" aria-hidden="true"></div>
-    <div class="window-content about-content">
-      <div class="about-panel">
-        <div class="about-panel-title">About This Desktop</div>
-        <div class="about-panel-body">
-          <div class="about-badge">Made with Love, Coffee, and Codex</div>
-          <div class="about-badge">Inspired by Ubuntu GNOME</div>
-          <div class="about-badge">Domain: linuxy.us</div>
-        </div>
-        <div class="about-panel-footer">© Abdul Noushad Sheikh 2026</div>
-      </div>
-    </div>
-  </section>
+  <section class="window terminal-window" data-window-id="terminal" data-window-src="windows/terminal.html" style="left: 220px; top: 80px;"></section>
+  <section class="window gui-window" data-window-id="gui" data-window-src="windows/profile.html" style="left: 320px; top: 140px; display: none;"></section>
+  <section class="window about-window" data-window-id="about-desktop" data-window-src="windows/about-desktop.html" style="left: 260px; top: 120px; width: 520px; height: 360px; display: none;"></section>
 </main>
 
 <!-- <div class="fabFlip">
