--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <meta property="og:description" content="A Linux terminal-style personal website showcasing projects, skills, and experience.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://linuxy.us/">
-  <meta property="og:image" content="https://linuxy.us/data/profile.png">
+  <meta property="og:image" content="https://linuxy.us/assets/images/profile.png">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Abdul's CLI - Terminal Portfolio">
   <meta name="twitter:description" content="A Linux terminal-style personal website showcasing projects, skills, and experience.">
-  <meta name="twitter:image" content="https://linuxy.us/data/profile.png">
+  <meta name="twitter:image" content="https://linuxy.us/assets/images/profile.png">
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com https://use.fontawesome.com https://cdn.jsdelivr.net 'unsafe-inline'; style-src 'self' https://fonts.googleapis.com https://cdn.jsdelivr.net https://use.fontawesome.com 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' https://fonts.gstatic.com https://use.fontawesome.com https://cdn.jsdelivr.net; connect-src 'self' https://ipapi.co; frame-src 'self'; base-uri 'self'; form-action 'self'">
   <title>Abdul's CLI - Terminal</title>
   <link rel="canonical" href="https://linuxy.us/">
@@ -37,6 +37,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css" integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous">
   <script type="text/javascript" src="js/shell.js" defer></script>
   <script type="text/javascript" src="js/loginInfo.js" defer></script>
+  <script type="text/javascript" src="js/render.js" defer></script>
   <script type="text/javascript" src="js/cli.js" defer></script>
   <script type="text/javascript" src="js/windowManager.js" defer></script>
   <script>
@@ -63,8 +64,8 @@
 
 <body>
   <div class="loader" role="status" aria-live="polite">
-    <img src="data/ubuntu.svg" alt="Ubuntu" class="ubuntu-logo">
-    <img src="data/throbber.svg" alt="" class="ubuntu-loading">
+    <img src="assets/images/ubuntu.svg" alt="Ubuntu" class="ubuntu-logo">
+    <img src="assets/images/throbber.svg" alt="" class="ubuntu-loading">
   </div>
 
 <main class="desktop" id="desktop" role="main">
@@ -94,6 +95,5 @@
 
 <!-- footer moved into About panel -->
 
-<script type="text/javascript" src="js/prettyUI.js" defer></script>
 </body>
 </html>
