--- a/windows/about-desktop.html
+++ b/windows/about-desktop.html
@@ -7,14 +7,4 @@
   </div>
 </header>
 <div class="resize-handle" aria-hidden="true"></div>
-<div class="window-content about-content">
-  <div class="about-panel">
-    <div class="about-panel-title">About This Desktop</div>
-    <div class="about-panel-body">
-      <div class="about-badge">Made with Love, Coffee, and Codex</div>
-      <div class="about-badge">Inspired by Ubuntu GNOME</div>
-      <div class="about-badge">Domain: linuxy.us</div>
-    </div>
-    <div class="about-panel-footer">© Abdul Noushad Sheikh 2026</div>
-  </div>
-</div>
+<div class="window-content about-content" id="about-desktop-content"></div>
