Fix JSON render and remove unused assets

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
   <link rel="preconnect" href="https://use.fontawesome.com" crossorigin>
   <link rel="stylesheet" href="styles/main.css" />
-  <link rel="stylesheet" href="styles/flip.css" />
+  <!-- flip.css removed -->
   <link rel="stylesheet" href="styles/prettyUI.css" />
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" />
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Ubuntu+Mono&display=swap" />
