Polish profile and about windows

--- a/windows/about-desktop.html
+++ b/windows/about-desktop.html
@@ -7,4 +7,11 @@
   </div>
 </header>
 <div class="resize-handle" aria-hidden="true"></div>
-<div class="window-content about-content" id="about-desktop-content"></div>
+<div class="settings-window settings-single">
+  <section class="main-content" id="about-desktop-content">
+    <div class="header-bar">
+      <span class="section-title">About</span>
+    </div>
+    <div class="content-body"></div>
+  </section>
+</div>
