--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
   </aside>
 
   <section class="window terminal-window" data-window-id="terminal" data-window-src="windows/terminal.html" style="left: 220px; top: 80px;"></section>
-  <section class="window gui-window" data-window-id="gui" data-window-src="windows/profile.html" style="left: 320px; top: 140px; display: none;"></section>
-  <section class="window about-window" data-window-id="about-desktop" data-window-src="windows/about-desktop.html" style="left: 260px; top: 120px; width: 520px; height: 360px; display: none;"></section>
+  <section class="window gui-window" data-window-id="gui" data-window-src="windows/profile.html" style="left: 260px; top: 120px; width: 900px; height: 600px; display: none;"></section>
+  <section class="window about-window" data-window-id="about-desktop" data-window-src="windows/about-desktop.html" style="left: 260px; top: 120px; width: 560px; height: 620px; display: none;"></section>
 </main>
 
 <!-- <div class="fabFlip">
