--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <!-- Meta tags start-->
   <meta content="yes" name="apple-mobile-web-app-capable">
   <meta content="black-translucent" name="apple-mobile-web-app-status-bar-style">
-  <link href="favicon.ico" rel="shortcut icon">
+  <link rel="icon" href="assets/images/ubuntu-tile.svg" type="image/svg+xml">
   <!-- Meta tags end -->
 </head>
 
@@ -83,9 +83,9 @@
     </button>
   </aside>
 
-  <section class="window terminal-window" data-window-id="terminal" data-window-src="windows/terminal.html" style="left: 220px; top: 80px;"></section>
-  <section class="window gui-window" data-window-id="gui" data-window-src="windows/profile.html" style="left: 260px; top: 120px; width: 900px; height: 600px; display: none;"></section>
-  <section class="window about-window" data-window-id="about-desktop" data-window-src="windows/about-desktop.html" style="left: 260px; top: 120px; width: 560px; height: 620px; display: none;"></section>
+  <section class="window terminal-window" data-window-id="terminal" data-window-src="windows/terminal.html" style="left: 122px; top: 80px;"></section>
+  <section class="window gui-window" data-window-id="gui" data-window-src="windows/profile.html" style="left: 172px; top: 150px; width: 900px; height: 600px; display: none;"></section>
+  <section class="window about-window" data-window-id="about-desktop" data-window-src="windows/about-desktop.html" style="left: 232px; top: 220px; width: 560px; height: 620px; display: none;"></section>
 </main>
 </body>
 </html>
