--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
   <section class="window terminal-window" data-window-id="terminal" data-window-src="windows/terminal.html" style="left: 122px; top: 80px;"></section>
   <section class="window gui-window" data-window-id="gui" data-window-src="windows/profile.html" style="left: 172px; top: 150px; width: 900px; height: 600px; display: none;"></section>
   <section class="window about-window" data-window-id="about-desktop" data-window-src="windows/about-desktop.html" style="left: 232px; top: 220px; width: 560px; height: 620px; display: none;"></section>
+  <section class="window alert-window" data-window-id="alert" data-window-src="windows/alert.html" style="left: 160px; top: 120px; width: 420px; height: 240px; display: none;"></section>
 </main>
 </body>
 </html>
