Add terminal intro typing and auto login

--- a/windows/terminal.html
+++ b/windows/terminal.html
@@ -8,9 +8,9 @@
 </header>
 <div class="resize-handle" aria-hidden="true"></div>
 <div id="terminal" role="region" aria-live="polite" aria-label="Terminal output">
-  <p><strong class="green" style="line-height: 1.7;">
-    \[._.]/</strong> - you're in abdul's cli. Try <span class="li-blue">help</span>, <span class="li-blue">about</span>, <span class="li-blue">projects</span>, or <span class="li-blue">gui</span>.
-    Type <span class="li-blue">gui</span> to open the profile window.
+  <p>
+    <strong class="green" style="line-height: 1.7;">\[._.]/</strong>
+    <span id="terminal-intro" data-text=" - you're in abdul's cli. Try help, path, ls, or gui. Type gui to open the profile window."></span>
   </p>
   <div class="loginInfo"></div>
   <p class="hidden">
